--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -46,6 +46,18 @@
         <item>
          <widget class="QWidget" name="profileWidget" native="true">
           <layout class="QHBoxLayout" name="horizontalLayout">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
            <item>
             <widget class="QLabel" name="label">
              <property name="text">
@@ -343,7 +355,8 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionEdit">
    <property name="icon">
-    <iconset theme="document-properties"/>
+    <iconset theme="document-properties">
+     <normaloff>.</normaloff>.</iconset>
    </property>
    <property name="text">
     <string>Edit</string>
