--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -319,6 +319,7 @@ p, li { white-space: pre-wrap; }
    <addaction name="separator"/>
    <addaction name="actionEdit"/>
    <addaction name="actionDelete"/>
+   <addaction name="actionOTP"/>
    <addaction name="separator"/>
    <addaction name="actionPush"/>
    <addaction name="actionUpdate"/>
@@ -359,6 +360,17 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="toolTip">
     <string>Delete</string>
+   </property>
+  </action>
+  <action name="actionOTP">
+   <property name="text">
+    <string>OTP</string>
+   </property>
+   <property name="toolTip">
+    <string>Generate OTP</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+G</string>
    </property>
   </action>
   <action name="actionPush">
